--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/react": "^1.0.5",
     "caniuse-lite": "^1.0.30001357",
     "chart.js": "^3.9.1",
+    "ethers": "^5.7.0",
     "framer-motion": "^7.2.0",
     "near-api-js": "^0.45.1",
     "next": "^12.0.0",
