--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
+    "@pinata/sdk": "^1.1.26",
     "caniuse-lite": "^1.0.30001357",
     "chart.js": "^3.9.1",
     "ethers": "^5.7.0",
     "framer-motion": "^7.2.0",
+    "fs": "^0.0.1-security",
+    "ipfs-http-client": "^57.0.3",
     "near-api-js": "^0.45.1",
     "next": "^12.0.0",
     "next-auth": "^4.3.4",
