--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
+    "@mui/material": "^5.10.5",
     "@pinata/sdk": "^1.1.26",
     "caniuse-lite": "^1.0.30001357",
     "chart.js": "^3.9.1",
