--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
     "@mui/material": "^5.10.5",
-    "@pinata/sdk": "^1.1.26",
     "caniuse-lite": "^1.0.30001357",
     "chart.js": "^3.9.1",
     "ethers": "^5.7.0",
+    "ethers-multicall": "^0.2.3",
     "framer-motion": "^7.2.0",
     "fs": "^0.0.1-security",
-    "ipfs-http-client": "^57.0.3",
     "near-api-js": "^0.45.1",
     "next": "^12.0.0",
     "next-auth": "^4.3.4",
@@ -39,6 +38,7 @@
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
+    "react-joyride": "^2.5.2",
     "react-scroll": "^1.8.4",
     "rumble-charts": "^5.0.0",
     "smooth-scroll": "^16.1.3",
