--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.22.5",
     "react-icons": "^4.3.1",
     "react-joyride": "^2.5.2",
     "react-scroll": "^1.8.4",
