--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -37,6 +38,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.22.5",
     "react-icons": "^4.3.1",
     "react-joyride": "^2.5.2",
     "react-scroll": "^1.8.4",
